# heygen-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_VIDEO_BACKGROUNDS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release-vscode-extension.yml  release.yml
docs/: PUBLISHING.md  RELEASING.md  VIDEO_BACKGROUNDS.md
examples/: example_video_background.py
heygen_mcp/: __init__.py  client.py  exceptions.py  server.py
heygen_mcp/models/: __init__.py  asset.py  avatar.py  avatar_group.py  base.py  folder.py  template.py  user.py  video.py  voice.py
tests/: __init__.py  conftest.py  test_background_feature.py  test_integration.py  test_server.py  test_video_backgrounds.py
tests/heygen_mcp_llm_tests/: .gitignore  README.md  llm_tests_config.json  llm_tests_config.schema.json  run_llm_tests.py
tests/heygen_mcp_llm_tests/scenarios/: _config-template.yaml.template  asset-listing-test.yaml  avatar-discovery-test.yaml  folder-management-test.yaml  template-workflow-test.yaml  user-credits-test.yaml  video-generation-test.yaml  voice-listing-test.yaml
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  GUIDE.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json
vscode-extension/src/: extension.ts
