[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heygen-mcp-sbroenne"
version = "0.2.1"
description = "HeyGen MCP Server for AI Video Creation (Community Fork)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Stefan Brenner" },
]
maintainers = [
    { name = "Stefan Brenner" },
]
keywords = ["heygen", "mcp", "claude", "ai", "video", "avatar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
heygen-mcp-sbroenne = "heygen_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/sbroenne/heygen-mcp"
"Repository" = "https://github.com/sbroenne/heygen-mcp"
"Bug Tracker" = "https://github.com/sbroenne/heygen-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pyright",
    "build",
    "twine",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
# The commands subsection is not valid in tool.uv
# The entry point is already defined in [project.scripts]
